Fix breadcrumb alignment DATA-542

--- a/ckanext/dia_theme/less/nav.less
+++ b/ckanext/dia_theme/less/nav.less
@@ -202,13 +202,14 @@
 
 /* override for rua styling */
 nav .breadcrumbs {
-  margin-top: 15px;
+  margin-top: 10px;
+  line-height: 1.5em;
 
   a {
     text-decoration: underline;
   }
   li {
-    line-height: unset;
+    line-height: inherit;
   }
 }
 .row.wrapper {
